hphp/hack/test/typecheck/variablevariable_no_name.php.exp
File "variablevariable_no_name.php", line 4, characters 10-10:
Variable Variables are not legal (Parsing[1002])
